# erap

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  shell.nix
api/: Api.fs  Dockerfile  Domain.fs  Program.fs  Storage.fs  api.fsproj  paket.dependencies  paket.references
api/.config/: dotnet-tools.json
arp_pipeline/: .env  Dockerfile  README.md  config.py  create_outputs  db.env  pyproject.toml  tiger_national.py  tiger_state.py  tiger_utils.py
arp_pipeline/arp_pipeline/: build_lookups.py  build_outputs.py  census.py  config.py  data_utils.py  download_utils.py  hud.py  nad.py  tiger_national.py  tiger_state.py  tiger_utils.py
arp_pipeline/arp_pipeline/models/: address_income.py  fips2010_lookup.py  hud_fmr_lookup.py  output.py
nix/: sources.json
notebooks/: Dockerfile  broward-fl-zcta.ipynb  county_analysis.ipynb  lackawanna-zcta.ipynb
